# final

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
big_library/: admin.py  apps.py  documents.py  forms.py  models.py  paginators.py  signals.py  tests.py  urls.py  views.py
big_library/management/commands/: fill_data.py
big_library/migrations/: 0001_initial.py  0002_rename_document_article.py
big_library/templates/big_library/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
config/: settings.py  urls.py
data/: test_data.json
users/: models.py  services.py  urls.py
users/management/commands/: csu.py
